tests/script_errors/missing_function/error.txt
Error: 
    1 | snot::badger(event)
      | ^^^^^^^^^^^^^^^^^^^ Call to undefined function snot::badger